web/style.css
body,
html {
  margin: 0;
  padding: 0;
  height: 100%; /* Ensures the body covers the full height of the viewport */
}

.messages {
  height: 30vh;
  display: grid;
  justify-content: center;
  align-items: center;
}

.container {
  display: flex; /* Activates Flexbox layout */
  height: 70vh; /* Makes the container fill the full height of the screen */
}

.left-panel,
.right-panel {
  /*margin-top: 5em;*/
  flex: 1; /* Each item takes an equal proportion of the available space */
  padding: 20px;
  box-sizing: border-box; /* Ensures padding/border is included in the width calculation */
  overflow-y: auto; /* Allows content to scroll within the panel if it overflows */
}

.left-panel {
  background-color: #f1f1f1;
}

.right-panel {
  background-color: #ddd;
}

/*changing position of where player1 enters his/her name*/
#player1,
#player2 {
  margin-left: 2em;
  width: 15em;
  height: 2em;
  padding: 10px; /*fFIXED UNIT*/
  font-size: 20px; /*FIXED UNIT*/
  border: 5px solid;
}
.messages label,
.left-panel label,
.right-panel label {
  margin-top: 50px;
  font-size: 2em;
  font-weight: bold;
}

.messages label {
  color: dodgerblue;
}

/*changing position of OK button*/
#OKbtn {
  width: 9em;
  height: 4em;
  padding: 10px; /*fFIXED UNIT*/
  /*  font-size: 20px; /*FIXED UNIT*/
  /*  border: 5px solid;*/
  margin-left: 28.5em;
  font-size: 18px;
  letter-spacing: 2px;
  border-radius: 40px;
  background: linear-gradient(90deg, #0162c8, #55e7fc);
  color: #775bea;
  justify-content: center;
  justify-items: center;
  align-items: center;
}
.right-panel #OKbtn {
  background: linear-gradient(90deg, #775bea, #ff72c0);
  color: #ff72c0;
}
/*adding animation to btn*/
#OKbtn:hover {
  background: linear-gradient(90deg, #775bea, #ff72c0);
  color: #ff72c0;
  cursor: pointer;
}

.right-panel #OKbtn:hover {
  background: linear-gradient(90deg, #0162c8, #55e7fc);
  color: #775bea;
  cursor: pointer;
}

/*editing margin between choices*/

